[gd_scene load_steps=28 format=3 uid="uid://bvilshlcj5wm0"]

[ext_resource type="Script" uid="uid://c25xaf86tpapg" path="res://Cenas/player.gd" id="1_iersn"]
[ext_resource type="Texture2D" uid="uid://d3jwm15et3t22" path="res://Assets Super Mario Bros/Sprites/Mario_Small_Idle.png" id="1_pmvhq"]
[ext_resource type="Texture2D" uid="uid://bausni6inywyv" path="res://Assets Super Mario Bros/Sprites/Mario_Small_Death.png" id="2_4q8k4"]
[ext_resource type="Shape2D" uid="uid://dq1bevcwubj81" path="res://Resources/CollisionShapes/small_mario.tres" id="2_iersn"]
[ext_resource type="Texture2D" uid="uid://ct8uqpacoxaq1" path="res://Assets Super Mario Bros/Sprites/Mario_Big_Idle.png" id="2_wh05g"]
[ext_resource type="Texture2D" uid="uid://bqfjqbv1vr2oq" path="res://Assets Super Mario Bros/Sprites/Mario_Small_Jump.png" id="3_5p0qj"]
[ext_resource type="Texture2D" uid="uid://c3njnoy5owfh3" path="res://Assets Super Mario Bros/Sprites/Mario_Big_Jump.png" id="3_8v2xp"]
[ext_resource type="Texture2D" uid="uid://crqgheu7ndoxs" path="res://Assets Super Mario Bros/Sprites/Mario_Big_Pole.png" id="4_t7cd8"]
[ext_resource type="Texture2D" uid="uid://ckd7ka2h150dt" path="res://Assets Super Mario Bros/Sprites/Mario_Small_Pole.png" id="5_2enhl"]
[ext_resource type="Texture2D" uid="uid://dvnr77h30cjn6" path="res://Assets Super Mario Bros/Sprites/Mario_Big_Run1.png" id="5_sjhg2"]
[ext_resource type="Texture2D" uid="uid://biwgmc04ug3tt" path="res://Assets Super Mario Bros/Sprites/Mario_Big_Run2.png" id="6_jnm6q"]
[ext_resource type="Texture2D" uid="uid://b7pkrn5h1n5lm" path="res://Assets Super Mario Bros/Sprites/Mario_Small_Run1.png" id="6_ruciq"]
[ext_resource type="Texture2D" uid="uid://cxxi757iq1gnv" path="res://Assets Super Mario Bros/Sprites/Mario_Big_Run3.png" id="7_ka0he"]
[ext_resource type="Texture2D" uid="uid://dlhg7nbxeials" path="res://Assets Super Mario Bros/Sprites/Mario_Small_Run2.png" id="7_yk6xx"]
[ext_resource type="Texture2D" uid="uid://d01eopk6c4cx1" path="res://Assets Super Mario Bros/Sprites/Mario_Small_Run3.png" id="8_bb2x8"]
[ext_resource type="Texture2D" uid="uid://k303fjvwyalc" path="res://Assets Super Mario Bros/Sprites/Mario_Big_Slide.png" id="8_rxqvy"]
[ext_resource type="Texture2D" uid="uid://ugx1dv5u8m74" path="res://Assets Super Mario Bros/Sprites/Mario-Shooting.png" id="9_2umio"]
[ext_resource type="Texture2D" uid="uid://cal7r48xqmfrt" path="res://Assets Super Mario Bros/Sprites/Mario_Small_Slide.png" id="9_60xba"]
[ext_resource type="Texture2D" uid="uid://4axg8se7m40x" path="res://Assets Super Mario Bros/Sprites/Mario_Shooting_Idle.png" id="10_5sl0s"]
[ext_resource type="Texture2D" uid="uid://d3i8ain3y4vfj" path="res://Assets Super Mario Bros/Sprites/Mario_Shooting_Jump.png" id="11_6bkmt"]
[ext_resource type="Texture2D" uid="uid://cwns46e1wprcc" path="res://Assets Super Mario Bros/Sprites/Mario_Shooting_Pole.png" id="12_2ex7r"]
[ext_resource type="Texture2D" uid="uid://bsfrxav8x3dot" path="res://Assets Super Mario Bros/Sprites/Mario_Shooting_Run1.png" id="13_ylkck"]
[ext_resource type="Texture2D" uid="uid://cipjmquw1tlrv" path="res://Assets Super Mario Bros/Sprites/Mario_Shooting_Run2.png" id="14_phtmq"]
[ext_resource type="Texture2D" uid="uid://daqnle02fss6v" path="res://Assets Super Mario Bros/Sprites/Mario_Shooting_Run3.png" id="15_8vy8t"]
[ext_resource type="Texture2D" uid="uid://1w6lqgnlyqo2" path="res://Assets Super Mario Bros/Sprites/Mario_Shooting-Slide.png" id="16_gdv6k"]
[ext_resource type="Script" uid="uid://bl1o00be35e22" path="res://Cenas/animated_sprite_2d.gd" id="25_8v2xp"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5p0qj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wh05g")
}],
"loop": true,
"name": &"big_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_8v2xp")
}],
"loop": true,
"name": &"big_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_t7cd8")
}],
"loop": true,
"name": &"big_pole",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_sjhg2")
}, {
"duration": 1.0,
"texture": ExtResource("6_jnm6q")
}, {
"duration": 1.0,
"texture": ExtResource("7_ka0he")
}],
"loop": true,
"name": &"big_run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_rxqvy")
}],
"loop": true,
"name": &"big_slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wh05g")
}, {
"duration": 1.0,
"texture": ExtResource("10_5sl0s")
}, {
"duration": 1.0,
"texture": ExtResource("2_wh05g")
}, {
"duration": 1.0,
"texture": ExtResource("10_5sl0s")
}, {
"duration": 1.0,
"texture": ExtResource("2_wh05g")
}, {
"duration": 1.0,
"texture": ExtResource("10_5sl0s")
}, {
"duration": 1.0,
"texture": ExtResource("2_wh05g")
}, {
"duration": 1.0,
"texture": ExtResource("10_5sl0s")
}],
"loop": false,
"name": &"big_to_shooting",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wh05g")
}, {
"duration": 1.0,
"texture": ExtResource("1_pmvhq")
}, {
"duration": 1.0,
"texture": ExtResource("2_wh05g")
}, {
"duration": 1.0,
"texture": ExtResource("1_pmvhq")
}, {
"duration": 1.0,
"texture": ExtResource("2_wh05g")
}, {
"duration": 1.0,
"texture": ExtResource("1_pmvhq")
}, {
"duration": 1.0,
"texture": ExtResource("2_wh05g")
}, {
"duration": 1.0,
"texture": ExtResource("1_pmvhq")
}],
"loop": true,
"name": &"big_to_small",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_2umio")
}],
"loop": false,
"name": &"shooting",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_5sl0s")
}],
"loop": true,
"name": &"shooting_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_6bkmt")
}],
"loop": true,
"name": &"shooting_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_2ex7r")
}],
"loop": true,
"name": &"shooting_pole",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_ylkck")
}, {
"duration": 1.0,
"texture": ExtResource("14_phtmq")
}, {
"duration": 1.0,
"texture": ExtResource("15_8vy8t")
}],
"loop": true,
"name": &"shooting_run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_gdv6k")
}],
"loop": true,
"name": &"shooting_slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_4q8k4")
}],
"loop": true,
"name": &"small_death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_pmvhq")
}],
"loop": true,
"name": &"small_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_5p0qj")
}],
"loop": true,
"name": &"small_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_2enhl")
}],
"loop": true,
"name": &"small_pole",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_ruciq")
}, {
"duration": 1.0,
"texture": ExtResource("7_yk6xx")
}, {
"duration": 1.0,
"texture": ExtResource("8_bb2x8")
}],
"loop": true,
"name": &"small_run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_60xba")
}],
"loop": true,
"name": &"small_slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_pmvhq")
}, {
"duration": 1.0,
"texture": ExtResource("2_wh05g")
}, {
"duration": 1.0,
"texture": ExtResource("1_pmvhq")
}, {
"duration": 1.0,
"texture": ExtResource("2_wh05g")
}, {
"duration": 1.0,
"texture": ExtResource("1_pmvhq")
}, {
"duration": 1.0,
"texture": ExtResource("2_wh05g")
}, {
"duration": 1.0,
"texture": ExtResource("1_pmvhq")
}, {
"duration": 1.0,
"texture": ExtResource("2_wh05g")
}],
"loop": false,
"name": &"small_to_big",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_pmvhq")
}, {
"duration": 1.0,
"texture": ExtResource("10_5sl0s")
}, {
"duration": 1.0,
"texture": ExtResource("1_pmvhq")
}, {
"duration": 1.0,
"texture": ExtResource("10_5sl0s")
}, {
"duration": 1.0,
"texture": ExtResource("1_pmvhq")
}, {
"duration": 1.0,
"texture": ExtResource("10_5sl0s")
}, {
"duration": 1.0,
"texture": ExtResource("1_pmvhq")
}, {
"duration": 1.0,
"texture": ExtResource("10_5sl0s")
}],
"loop": false,
"name": &"small_to_shooting",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_iersn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5p0qj")
animation = &"shooting"
script = ExtResource("25_8v2xp")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 6

[node name="AreaCollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = ExtResource("2_iersn")

[node name="BodyCollisionShape2D" type="CollisionShape2D" parent="."]
shape = ExtResource("2_iersn")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
